--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "browser-router": "^0.2.0",
     "dotenv": "^10.0.0",
     "mongo": "^0.1.0",
     "mongoose": "^5.12.14",
